# dags-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup-dev.sh
calendar/: holidays.py  utils.py
common/: aws.py  datasets.py
config/: default.py  prod.py
constants/: datasets.py
constants/dists/: external.py
dags/: refresh_aws_conn.py  test_nyse.py
dags/operators/: pythonic_docker_operator.py
hooks/: find_missing_email_constants.py  run_hook.py
hooks/email_to_constant/: ReadMe.md  __init__.py  functions.py
plugins/dag_wrapper/: environment.py
plugins/operators/: pythonic_docker_operator.py
plugins/timetables/: us_timetables.py
tests/: test_pythonic_docker_operator.py
